tests/custom/STARIS_2022/basic/partitions/partition-operator-errors/set-parts-together/stderr.expected
Error:
    set-parts-together.essence:4:42:
  |
4 | such that b = ({{2,4},{6, 8, 9}} = parts(s))
  |                                          ^
Type error:
	Expected: partition from ?
	Got: set of set of int

set-parts-together.essence:6:30:
  |
6 | such that c = together({2,6},s)
  |                              ^
Type error:
	Expected: partition from int
	Got: set of set of int

set-parts-together.essence:8:30:
  |
8 | such that d = together({2,4},s)
  |                              ^
Type error:
	Expected: partition from int
	Got: set of set of int

cat: *.solution: No such file or directory
